--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rawger": "^1.2.3",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-animatable": "^1.3.0",
     "vue": "^2.5.16",
     "vue-native-core": "0.0.6",
     "vue-native-helper": "0.0.8",
